# Is_prompting

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: proca_default.yaml
configs/models/: gemma3_12b.yaml  gemma3_27b.yaml  gemma3_4b.yaml  gpt_oss_120b.yaml  gpt_oss_20b.yaml  qwen3_14b.yaml  qwen3_32b.yaml  qwen3_8b.yaml
data/: mock_sotopia.json  mock_wvs.csv
docs/: ARTIFACT.md
proca/: __init__.py  data.py  encoders.py  losses.py  model.py  prototypes.py  refinement.py  synthesis.py  train.py  utils.py
proca/ablations/: __init__.py  dialogue_only.py  intent_only.py  reasoning_only.py  teacher_swap.py
proca/eval/: baselines.py  wvs_eval.py  xling_eval.py
scripts/: eval_all.sh  run_ablations.sh  train_proca.sh
tests/: conftest.py  test_encoders.py  test_eval_smoke.py  test_losses.py  test_model_forward.py  test_prototypes.py  test_refinement.py  test_train_dryrun.py
